--- a/conflict_neg.bib
+++ b/conflict_neg.bib
@@ -176,7 +176,6 @@
 	author = {Goffman, Erving},
 	year = {1986},
 	keywords = {Social interaction, Social psychology},
-	annote = {Reprint. Originally published: New York : Harper \& Row, 1974},
 }
 
 @book{bateson_steps_2000,
@@ -188,7 +187,6 @@
 	author = {Bateson, Gregory},
 	year = {2000},
 	keywords = {Anthropology, Evolution, Knowledge, Theory of, Psychiatry},
-	annote = {Originally published: San Francisco : Chandler Pub. Co., 1972. With new foreword},
 }
 
 @book{luckiesh_visual_2017,
@@ -323,14 +321,14 @@
 	year = {2018},
 }
 
-@book{lewicki_essentials_2016,
-	address = {Dubuque},
-	edition = {Sixth Edition},
-	title = {Essentials of negotiation},
-	isbn = {978-0-07-786246-6},
+@book{lewicki_negociacion_2024,
+	edition = {9},
+	title = {Negociación},
+	isbn = {978-607-15-2295-5},
+	url = {https://www-ebooks7-24-com.ezproxy.umng.edu.co/?il=40562},
 	publisher = {McGraw-Hill Education},
 	author = {Lewicki, Roy J. and Barry, Bruce and Saunders, David M.},
-	year = {2016},
+	year = {2024},
 	keywords = {Negotiation in business, Negotiation},
 }
 
@@ -339,4 +337,47 @@
 	url = {https://CRAN.R-project.org/package=cluster},
 	author = {Maechler, Martin and Rousseeuw, Peter and Struyf, Anja and Hubert, Mia and Hornik, Kurt},
 	year = {2022},
+}
+
+@techreport{iregui_guerrero_politica_2018,
+	title = {Política de formación para la investigación, la innovación y el emprendimiento},
+	url = {https://revistas.unimilitar.edu.co/index.php/wpapers/article/view/3750},
+	urldate = {2024-06-18},
+	institution = {Universidad Militar Nueva Granada},
+	author = {Iregui Guerrero, Marcela and Cuevas Silva, Juan María},
+	year = {2018},
+	doi = {10.18359/whitepaper.3750},
+	file = {Full Text:C\:\\Users\\Usuario\\Zotero\\storage\\HQMJHVH6\\Iregui Guerrero and Cuevas Silva - 2018 - Política de formación para la investigación, la in.pdf:application/pdf},
+}
+
+@misc{umng_reglamento_2021,
+	title = {Reglamento {General} {Estudiantil} de {Pregrado}: {Acuerdo} 02 de 2015 actualizado, conforme a los {Acuerdos} 01 de 2017, 05 de 2018 y 04 de 2020, que lo modifican parcialmente},
+	publisher = {Universidad Militar Nueva Granada},
+	author = {Umng},
+	month = aug,
+	year = {2021},
+}
+
+@article{greenhalgh_smr_1986,
+	title = {{SMR} {Forum}: {Managing} {Conflict}},
+	volume = {27},
+	language = {en-US},
+	number = {4},
+	journal = {Sloan Management Review},
+	author = {Greenhalgh, Leonard},
+	year = {1986},
+	pages = {45--51},
+}
+
+@book{pruitt_social_2004,
+	address = {Boston},
+	edition = {3rd ed},
+	series = {{McGraw}-{Hill} series in social psychology},
+	title = {Social conflict: escalation, stalemate, and settlement},
+	isbn = {978-0-07-285535-7},
+	shorttitle = {Social conflict},
+	publisher = {McGraw-Hill},
+	author = {Pruitt, Dean G. and Kim, Sung Hee and Rubin, Jeffrey Z.},
+	year = {2004},
+	keywords = {Interpersonal conflict, Problem solving, Psychological aspects, Social conflict},
 }
