--- a/001_nature_neg.tex
+++ b/001_nature_neg.tex
@@ -476,7 +476,7 @@ negotiation}\label{approaches-and-tactics-to-negotiation}
 
 }
 
-\caption{\label{fig-conflict-diagnostic-model}Conflict Diagnostic Model
+\caption{\label{fig-conflict-diagnostic-model}Conflict diagnostic model
 (\citeproc{ref-lewicki_negociacion_2024}{Lewicki, Barry, and Saunders
 2024}, p 23) and (\citeproc{ref-greenhalgh_smr_1986}{Greenhalgh 1986}, p
 47)}
